--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 #nav.affix {
   height:78px;
   padding:15px 0px 0px 200px;
-  background-image: url('assets/Phi_Franchise_logo.png');
+  background-image: url('bigfoot.png');
   background-repeat:no-repeat;
   background-position: 5% 18px;
 }
