--- a/index.html
+++ b/index.html
@@ -978,11 +978,11 @@ div#language-toggle-container a.active{
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav nav-justified">
           <li><a  href="#section1" data-translation="SPANISH">HOME</a></li>
-          <li><a href="#section2" data-translation="SPANISH">WHAT IS BIGFOOT</a></li>
+          <li><a href="#section2" data-translation="SPANISH">BIGFOOT</a></li>
 
-          <li><a  href="#section3" data-translation="SPANISH">STUNNING MEDIA</a></li>
+          <li><a  href="#section3" data-translation="SPANISH">MEDIA</a></li>
 
-          <li><a href="#section4" data-translation="SPANISH">LOOK AT OUR WORK</a></li>
+          <li><a href="#section4" data-translation="SPANISH">OUR WORK</a></li>
 
 
           <li><a href="#section5" data-translation="SPANISH">CONTACT</a></li>
