--- a/index.html
+++ b/index.html
@@ -986,6 +986,19 @@ div#language-toggle-container a.active{
 
 
           <li><a href="#section5" data-translation="SPANISH">CONTACT</a></li>
+
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
           <li><a href="#" data-translation="SPANISH">FAQ</a></li>
           <li><a href="#" data-translation="SPANISH">PAPERS</a></li>
           <li><a href="#" data-translation="SPANISH">NEWS</a></li>
@@ -997,11 +1010,17 @@ div#language-toggle-container a.active{
 </div><!--/.navbar -->
   
 <!-- Begin page content -->
-    
+<!-- Begin page content -->
+        <div class="divider" style="clear:both;" ></div>
 <div class="divider" id="section1"> <img src="home-section.png"></div>
+
+    <div class="divider" style="clear:both;" ></div>
 <div class="divider" id="section2"> <img src="moreinformation.png"></div>
+    <div class="divider" style="clear:both;" ></div>
 <div class="divider" id="section3"> <img src="video-section.png"></div>
+    <div class="divider" style="clear:both;" ></div>
 <div class="divider" id="section4"> <img src="testimonials.png"></div>
+    <div class="divider" style="clear:both;" ></div>
 <div class="divider" id="section5"> <img src="contact-us.png"></div>
 <div class="divider" ></div>
 
