make images responsive

--- a/index.html
+++ b/index.html
@@ -964,6 +964,10 @@ div#language-toggle-container a.active{
   font-weight:bold;
 }
 
+.divider{
+  height:20px;
+}
+
 </style>
 <!-- Fixed navbar -->
 <div class="navbar navbar-custom navbar-inverse navbar-static-top" id="nav">
@@ -1009,16 +1013,16 @@ div#language-toggle-container a.active{
 <!-- Begin page content -->
 <!-- Begin page content -->
         <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section1"> <img src="home-section.png"></div>
+<div class="divider" id="section1"> <img class="img-responsive" src="home-section.png"></div>
 
     <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section2"> <img src="moreinformation.png"></div>
+<div class="divider" id="section2"> <img class="img-responsive" src="moreinformation.png"></div>
     <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section3"> <img src="video-section.png"></div>
+<div class="divider" id="section3"> <img class="img-responsive" src="video-section.png"></div>
     <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section4"> <img src="testimonials.png"></div>
+<div class="divider" id="section4"> <img class="img-responsive" src="testimonials.png"></div>
     <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section5"> <img src="contact-us.png"></div>
+<div class="divider" id="section5"> <img class="img-responsive "src="contact-us.png"></div>
 <div class="divider" ></div>
 
 
