add sections, padding 20vw

--- a/index.html
+++ b/index.html
@@ -964,9 +964,10 @@ div#language-toggle-container a.active{
   font-weight:bold;
 }
 
-.divider{
-  height:20px;
+section{
+padding-top:20vw;
 }
+
 
 </style>
 <!-- Fixed navbar -->
@@ -1012,17 +1013,18 @@ div#language-toggle-container a.active{
   
 <!-- Begin page content -->
 <!-- Begin page content -->
-        <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section1"> <img class="img-responsive" src="home-section.png"></div>
+      
+   
+   <div class="divider section" id="section1"> <img class="img-responsive" src="home-section.png"></div>
 
-    <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section2"> <img class="img-responsive" src="moreinformation.png"></div>
-    <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section3"> <img class="img-responsive" src="video-section.png"></div>
-    <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section4"> <img class="img-responsive" src="testimonials.png"></div>
-    <div class="divider" style="clear:both;" ></div>
-<div class="divider" id="section5"> <img class="img-responsive "src="contact-us.png"></div>
+    <div class="divider section" id="section2"> <img class="img-responsive" src="moreinformation.png"></div>
+ 
+    <div class="divider section " id="section3"> <img class="img-responsive" src="video-section.png"></div>
+
+    <div class="divider section" id="section4"> <img class="img-responsive" src="testimonials.png"></div>
+
+<div class="divider section" id="section5"> <img class="img-responsive "src="contact-us.png"></div>
+
 <div class="divider" ></div>
 
 
