add styling to sections

--- a/index.html
+++ b/index.html
@@ -1015,15 +1015,15 @@ padding-top:30px;
 <!-- Begin page content -->
       
    
-   <div class="divider section" id="section1"> <img class="img-responsive" src="home-section.png"></div>
+   <div class="divider section" style="padding-top:30px "id="section1"> <img class="img-responsive" src="home-section.png"></div>
 
-    <div class="divider section" id="section2"> <img class="img-responsive" src="moreinformation.png"></div>
+    <div class="divider section" style="padding-top:30px" id="section2"> <img class="img-responsive" src="moreinformation.png"></div>
  
-    <div class="divider section " id="section3"> <img class="img-responsive" src="video-section.png"></div>
+    <div class="divider section" style="padding-top:30px" id="section3"> <img class="img-responsive" src="video-section.png"></div>
 
-    <div class="divider section" id="section4"> <img class="img-responsive" src="testimonials.png"></div>
+    <div class="divider section" style="padding-top:30px"  id="section4"> <img class="img-responsive" src="testimonials.png"></div>
 
-<div class="divider section" id="section5"> <img class="img-responsive "src="contact-us.png"></div>
+<div class="divider section" style="padding-top:30px"   id="section5"> <img class="img-responsive "src="contact-us.png"></div>
 
 <div class="divider" ></div>
 
