--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 
 .navbar-inverse .navbar-toggle {
     border-color: transparent;
+    background-color: transparent;
 }
+
+
 
 .navbar-inverse .navbar-toggle:hover {
     background-color: transparent;
@@ -69,12 +72,56 @@
   background-repeat:no-repeat;
 
 }
+
+.navbar-toggle{
+  position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 20px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 4px;
+
+}
+
+
+.navbar-collapse{
+    max-height: 340px;
+    padding-right: 15px;
+    padding-left: 15px;
+    overflow-x: visible;
+    margin-top: 20px;
+    box-shadow: none;
+    -webkit-overflow-scrolling: touch;
+}
+
+.navbar-collapse.in .navbar-nav {
+     margin: 0px; 
+}
+
+.navbar-nav {
+     margin: 0px; 
+}
+.nav-justified {
+     width: 100%; 
+}
+
+.navbar-nav {
+     margin: 0px; 
+}
+
+.navbar-nav {
+     margin: 0px; 
+}
+
 .navbar-collapse.in {
   overflow-y: visible;
   background-color:#134881;
-  width:200px;
-  float:right;
+  width:100%;
 }
+
 .navbar-collapse.in .navbar-nav{
  margin: 1px 1px 0px 9%; 
 }
