--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
 
 }
 
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus {
+    color: #fff;
+    background-color: #134881;
+}
+
+
 
 .navbar-collapse{
     max-height: 340px;
@@ -259,7 +265,9 @@ div#footer{
 }
 /*************************************************/
 
-
+.navbar-inverse .navbar-nav>.open>a{
+      background-color: transparent;
+}
 
 /***** CAROUSEL STYLES **********/
 /*#homeCarouselContainer{
