--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
   width:100%;
 }
 
+@media (max-width: 767px){
+
+.navbar-nav .open .dropdown-menu {
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: white;
+    border: 0;
+    box-shadow: none;
+    width: 100px;
+    margin-right: auto;
+    margin-left: auto;
+    }
+}
 .navbar-collapse.in .navbar-nav{
  margin: 1px 1px 0px 9%; 
 }
