--- a/FAQ.html
+++ b/FAQ.html
@@ -1074,9 +1074,9 @@ padding-top:30px;
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MORE <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="faq.html" data-translation="SPANISH">FAQ</a></li>
-            <li><a href="papers.html" data-translation="SPANISH">PAPERS</a></li>
-            <li><a href="news.html" data-translation="SPANISH">NEWS</a></li>
+            <li><a href="#" data-translation="SPANISH">FAQ</a></li>
+            <li><a href="#" data-translation="SPANISH">PAPERS</a></li>
+            <li><a href="#" data-translation="SPANISH">NEWS</a></li>
           </ul>
         </li>
           
@@ -1320,3 +1320,4 @@ padding-top:30px;
 
   </body>
 </html>
+
