--- a/papers.html
+++ b/papers.html
@@ -1064,7 +1064,7 @@ padding-top:30px;
           <li><a  href="#section1" data-translation="SPANISH">HOME</a></li>
           <li><a href="#section2" data-translation="SPANISH">BIGFOOT</a></li>
 
-          <li><a  href="#section3" data-translation="SPANISH">MEDIA</a></li>
+          <li><a  href="index/html#section3" data-translation="SPANISH">MEDIA</a></li>
 
           <li><a href="#section4" data-translation="SPANISH">OUR WORK</a></li>
 
@@ -1094,15 +1094,8 @@ padding-top:30px;
 <!-- Begin page content -->
       
    
-   <div class="divider section" style="padding-top:30px "id="section1"> <img class="img-responsive" src="home-section.png"></div>
+   <div class="divider section" style="padding-top:30px "id="section1"> <img class="img-responsive" src="papers.png"></div>
 
-    <div class="divider section" style="padding-top:30px" id="section2"> <img class="img-responsive" src="moreinformation.png"></div>
- 
-    <div class="divider section" style="padding-top:30px" id="section3"> <img class="img-responsive" src="video-section.png"></div>
-
-    <div class="divider section" style="padding-top:30px"  id="section4"> <img class="img-responsive" src="testimonials.png"></div>
-
-<div class="divider section" style="padding-top:30px"   id="section5"> <img class="img-responsive "src="contact-us.png"></div>
 
 <div class="divider" ></div>
 
