--- a/news.html
+++ b/news.html
@@ -971,7 +971,7 @@ padding-top:30px;
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav nav-justified">
-          <li><a  href="#section1" >HOME</a></li>
+          <li><a  href="index.html#section1" >HOME</a></li>
           <li><a href="#section2" >BIGFOOT</a></li>
 
           <li><a  href="#section3" >MEDIA</a></li>
