--- a/papers.html
+++ b/papers.html
@@ -971,15 +971,15 @@ padding-top:30px;
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav nav-justified">
-          <li><a  href="#section1" >HOME</a></li>
-          <li><a href="#section2" >BIGFOOT</a></li>
+        <li><a  href="index.html#section1" >HOME</a></li>
+          <li><a href="index.html#section2" >BIGFOOT</a></li>
 
-          <li><a  href="#section3" >MEDIA</a></li>
+          <li><a  href="index.html#section3" >MEDIA</a></li>
 
-          <li><a href="#section4" >OUR WORK</a></li>
+          <li><a href="index.html#section4" >OUR WORK</a></li>
 
 
-          <li><a href="#section5" >CONTACT</a></li>
+          <li><a href="index.html#section5" >CONTACT</a></li>
 
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MORE <span class="caret"></span></a>
